err/sonlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sonLib'...
Compiling './lib/python3.5/site-packages/sonLib/bioio.py'...
***   File "./lib/python3.5/site-packages/sonLib/bioio.py", line 431
    os.chmod(dirName, 0777)
                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/sonLib/nxnewick.py'...
***   File "./lib/python3.5/site-packages/sonLib/nxnewick.py", line 190
    print "PRE"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sonLib/tree.py'...
***   File "./lib/python3.5/site-packages/sonLib/tree.py", line 583
    print leafMap
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sonLib-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
